larger font of code

--- a/_rmd/2016-11-28-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
+++ b/_rmd/2016-11-28-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
@@ -10,7 +10,7 @@ draft: false
 
 I will continue in describing forecast methods, which are suitable to seasonal (or multi-seasonal) time series. In the previous [post](https://petolau.github.io/Forecast-electricity-consumption-with-similar-day-approach-in-R/) **smart meter** data of electricity consumption were introduced and a forecast method using **similar day approach** was proposed. ARIMA and exponential smoothing (common methods of time series analysis) were used as forecast methods. The biggest disadvantage of this approach was that we created multiple models at once for different days in the week, which is computationally expensive and it can be a little bit unclear. Regression methods are more suitable for multi-seasonal times series. They can handle multiple seasonalities through independent variables (inputs of a model), so just one model is needed. In this post, I will introduce the most basic regression method - **multiple linear regression** (MLR).
 
-I have prepared a file with four aggregated time series for analysis and forecast. It can be found [on my github repo](https://github.com/PetoLau/petolau.github.io/tree/master/_rmd), the name of the file is *DT_4_ind*. Of course, I'm using EnerNOC smart meter data again and time series were aggregated by four located industries. The file was created easily by the package `feather` ([CRAN link](https://CRAN.R-project.org/package=feather)), so only by this package, you can read this file again. The `feather` is a useful tool to share data for **R** and Python users.
+I have prepared a file with four aggregated time series for analysis and forecast. It can be found on [my github repo](https://github.com/PetoLau/petolau.github.io/tree/master/_rmd), the name of the file is *DT_4_ind*. Of course, I'm using EnerNOC smart meter data again and time series were aggregated by four located industries. The file was created easily by the package `feather` ([CRAN link](https://CRAN.R-project.org/package=feather)), so only by this package, you can read this file again. The `feather` is a useful tool to share data for **R** and Python users.
 
 Data manipulation will be done by `data.table` package, visualizations by `ggplot2`, `plotly` and `animation` packages.
 
