--- a/_rmd/2016-12-03-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
+++ b/_rmd/2016-12-03-Forecast-double-seasonal-time-series-with-multiple-linear-regression-in-R.Rmd
@@ -3,7 +3,7 @@ layout: post
 title: Forecast double seasonal time series with multiple linear regression in R
 author: Peter Laurinec
 published: false
-status: process
+status: processed
 tags: R forecast
 draft: false
 ---
