Update: larr tryin vol.2

--- a/_rmd/2017-03-26-First-R-Slovakia-meetup.Rmd
+++ b/_rmd/2017-03-26-First-R-Slovakia-meetup.Rmd
@@ -1,5 +1,5 @@
 ---
-title: R &larr Slovakia meetup started to build community in Bratislava
+title: R&larr;Slovakia meetup started to build community in Bratislava
 author: Peter Laurinec
 layout: post
 published: false
